add rabbit and model-job table
