# src/modules/model-job/types/model-job-mutations.interface.ts
@@ -1,0 +1,8 @@
+import { ModelType } from "./model-job.enum";
+
+export interface IModelJobCreate {
+  model: ModelType;
+  prompt: string;
+  inputFileId: string;
+  userId: string;
+}
