# src/modules/model-job/types/model-job.enum.ts
@@ -1,0 +1,10 @@
+export enum ModelType {
+  OpenAI = "OPENAI",
+}
+
+export enum ModelJobStatusType {
+  queued = "queued",
+  processing = "processing",
+  succeeded = "succeeded",
+  failed = "failed",
+}
